k8s/networkpolicy.yaml
# Default deny all ingress and egress in hr-app namespace
# This is the foundation of Zero Trust at pod level
# Nothing communicates unless explicitly allowed below
# Satisfies REQ-NCA-P3-07 micro-segmentation
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: hr-app
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress

---
# Allow traffic into frontend pods from the Workload VPC
# Covers traffic from VPN clients reaching the NodePort
# Satisfies REQ-NCA-P3-08 least privilege
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-ingress
  namespace: hr-app
spec:
  podSelector:
    matchLabels:
      app: hr-frontend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 10.20.0.0/16
    - from:
        - ipBlock:
            cidr: 172.16.0.0/22

---
# Allow frontend egress to backend only
# Blocks frontend from reaching IMDS
# Frontend has no need for AWS API access
# Satisfies REQ-NCA-P3-06 Zero Trust — least privilege at pod level
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-egress
  namespace: hr-app
spec:
  podSelector:
    matchLabels:
      app: hr-frontend
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: hr-backend
      ports:
        - port: 3000
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 169.254.169.254/32
      ports:
        - port: 80
        - port: 443
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP

---
# Allow traffic into backend pods only from frontend pods
# Backend is completely isolated from everything except the frontend
# Satisfies REQ-NCA-P3-08 least privilege
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-ingress
  namespace: hr-app
spec:
  podSelector:
    matchLabels:
      app: hr-backend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: hr-frontend
      ports:
        - port: 3000

---
# Allow backend egress to Aurora and AWS APIs
# Backend needs to reach Aurora on port 5432
# and Secrets Manager/IMDS on port 443
# Satisfies REQ-NCA-P3-08 least privilege
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-egress
  namespace: hr-app
spec:
  podSelector:
    matchLabels:
      app: hr-backend
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 10.30.0.0/16
      ports:
        - port: 5432
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 443
    - to:
        - ipBlock:
            cidr: 169.254.169.254/32
      ports:
        - port: 80
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
